# ACRChatbot

./: .gitignore  .gitmodules  AlpacaModel.py  LLModel.py  LangChainModel.py  LlamaIndex.py  main.py  out.tsv  pyproject.toml  requirements.txt  testscript.py
static/styles/: style.css
templates/: index.html
