[tool.poetry]
name = "chatgptrads"
version = "0.1.0"
description = "This program creates a language model that allows users to input clinical scenarios and output radiology recomendations"
authors = ["Sam Shenoi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
openai = "^0.27.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
